# ai-guardrails

./: .env.example  .gitignore  BUGS.md  FAILURES.md  README.md  TESTING_LOG_500.md  WRITEUP.md  ui_mockup.html
backend/: pyproject.toml  railway.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py
backend/app/agent/: __init__.py  agent.py  compile_agent.py  compile_prompt.py  judge.py  openrouter.py  prompt.py  refine_agent.py  tools.py
backend/app/engine/: __init__.py  conditional.py  engine.py  expressions.py  typed_rules.py
backend/app/routes/: __init__.py  activity.py  admin.py  businesses.py  compile.py  conversations.py  health.py  rules.py  test_cases.py
backend/app/schemas/: __init__.py  conversation_state.py  rules.py
backend/app/services/: __init__.py  audit.py  seed.py  test_runner.py
backend/tests/: conftest.py
backend/tests/eval/: README.md  __init__.py  _results.py  businesses.py  conftest.py  framework.py  report.py  taxonomy.py  test_eval.py
backend/tests/eval/cases/: __init__.py  adversarial.py  architecture_dispositions.py  exotic_supported.py  family_a_typed.py  family_agt.py  family_b_grouped.py  family_c_preconditioned.py  family_d_judge.py  family_e2e.py  family_f_aggregation.py  family_g9_compile_pipeline.py
backend/tests/eval/results/: latest.md
backend/tests/tier1_engine/: __init__.py  test_engine.py  test_expressions.py
backend/tests/tier4_corpus/: __init__.py  report.py  runner.py  spec.py  ui.py
frontend/: package-lock.json  package.json
scripts/: eval.sh  probe.sh  run.sh  setup.sh
(+28 files in other folders)
